--- a/src/Home.css
+++ b/src/Home.css
@@ -2,6 +2,9 @@
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 body {
@@ -138,10 +141,6 @@ p {
     flex-direction: column;
     width: 20em;
 }
-.cardVideo{
- 
-}
-
 .right{
     display: flex;
     flex-direction: column;
