--- a/src/About.css
+++ b/src/About.css
@@ -1,101 +1,21 @@
-#root {
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
-}
-
-body {
-    background-color: rgb(27, 27, 27);
-    overflow-x: hidden;
-}
-.topBar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 5em;
-    margin-right: 5em;
-}
-
-.topBarOther{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-
-}
-.topBarElement{
-    cursor: pointer;
-}
-.content {
-    display: flex; 
-    align-items: center;
-    margin-top: 10em;
-    width: 90em;
-}
-
-.topBarElement{
-    margin-left: 2em;
-}
-
-p {
-    color: white;
-    font-weight: 500;
-    font-size: 1.5rem;
-}
-
-.header1 {
-    font-size: 8rem;
-    font-weight: 700;
-    margin: 0em;
-}
-
-.header2 {
-    font-size: 5rem;
-    font-weight: 700;
-}
-
-.header3 {
-    font-size: 3rem;
-    font-weight: 700;
-}
-
-.header4{
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-.topBarElement:hover {
-    color: lightblue;
-  }
-  
-.cursor{
-    cursor: pointer;
-}
-
-.section {
-    max-width: 80em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 2em;
-    margin-right: 2em;
-}
-
 .bioCard{
     margin: 2em;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 30em;
-    background-color: RGBA(255,255,255,0.2);
+    border-style: solid;
+    border-color: RGBA(255,255,255,0.1);
     padding: 2em;
     border-radius: 4px;
     width: 50em;
     display: flex;
+    height: fit-content;
 }
 
 .bioImg{
     height: 20em;
-    width: 16em;
+    width: 15em;
 }
 
 .row1, .row2 {
