--- a/src/Sponsors.css
+++ b/src/Sponsors.css
@@ -1,81 +1,3 @@
-#root {
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
-}
-
-body {
-    background-color: rgb(27, 27, 27);
-    overflow-x: hidden;
-}
-.topBar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 5em;
-    margin-right: 5em;
-}
-
-.topBarOther{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-
-}
-.topBarElement{
-    cursor: pointer;
-}
-.content {
-    display: flex; 
-    flex-direction: column;
-    margin-top: 5em;
-}
-
-.topBarElement{
-    margin-left: 2em;
-}
-
-p {
-    color: white;
-    font-weight: 500;
-    font-size: 1.5rem;
-}
-
-.header1 {
-    font-size: 8rem;
-    font-weight: 700;
-    margin: 0em;
-}
-
-.header2 {
-    font-size: 5rem;
-    font-weight: 700;
-}
-
-.header3 {
-    font-size: 3rem;
-    font-weight: 700;
-}
-
-.header4{
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-.blue {
-    color:rgb(0, 170, 255);
-}
-.lightBlue{
-    color:rgb(159, 223, 255);
-}
-
-.section {
-    max-width: 80em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 2em;
-    margin-right: 2em;
-}
 .sponsors {
     display: flex;
     flex-wrap: wrap;
@@ -88,4 +10,13 @@ p {
     max-width: 100%; /* Ensure it scales proportionally within its container */
     object-fit: contain; /* Prevent squishing or stretching */
     margin: 0 auto; /* Center the image within its flex item */
+}
+
+.contact {
+    text-align: center;
+    display: flex;
+}
+
+.leftContact{
+    width: 30em;
 }
