--- a/src/Blog.css
+++ b/src/Blog.css
@@ -14,15 +14,17 @@
     height: 15em;
 }
 .card{
-    border-style: solid;
-    border-color: RGBA(255,255,255,0.1);
     padding: 4em 2em 0em 2em;
-    border-radius: 4px;
     margin-top: 2em;
     margin: 1em;
     display: flex;
     flex-direction: column;
     width: 20em;
+}
+.border{
+    border-style: solid;
+    border-color: RGBA(255,255,255,0.1);
+    border-radius: 10px;
 }
 
 .card:hover {
