--- a/src/Home.css
+++ b/src/Home.css
@@ -7,15 +7,18 @@
 }
 
 #root.homePage {
-    background-image: url('./img/bg.PNG');
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: top center; 
+    background-image: 
+        url('./img/lowBg.PNG'), 
+        url('./img/bg.PNG');
+    background-size: 100% auto, 100% auto;
+    background-repeat: no-repeat, no-repeat;
+    background-position: bottom center, top center; 
     background-attachment: scroll;
     min-height: 100vh; 
 }
+
 body {
-    background-color: rgb(18,33,73);
+    background-color: rgb(16, 28, 63); 
     overflow-x: hidden;
 }
 
@@ -35,7 +38,8 @@ body {
 }
 .topBarElement{
     cursor: pointer;
-    margin-left: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 .topBarElement:hover {
     color:rgb(0, 170, 255);
@@ -47,6 +51,8 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 5em;
+    margin-right: 1.3em;
+    margin-bottom: 5em;
 }
 
 p {
@@ -112,9 +118,13 @@ p {
     justify-content: space-between;
     
 }
+.about.section {
+    padding: 2em;
+}
 .teamPhoto{
     width: 40em;
     margin-left: 2em;
+    margin-right: 4em;
 }
 .right{
     display: flex;
@@ -151,4 +161,13 @@ p {
     50% {
         transform: translateY(-2px); /* Move upward slightly */
     }
+}
+
+.brag {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.bragElement {
+    margin: 1em;
 }
